--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,8 @@ html,body {
 	width: 100%;
 	height: 90%;
 }
+.leaflet-popup-content-wrapper, .leaflet-popup-tip {
+	background: transparent;
+	text-align: center;
+	box-shadow: 0 0px 0px rgba(0,0,0,0);
+}
