--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@ html,body {
 	height: 100%;
 	margin: 0;
 	padding: 0;
+	font-family: Arial;
 }
 #map {
 	width: 80%;
@@ -54,8 +55,31 @@ html,body {
 	position: absolute;
 	top :25%;
 	left:1%;
-	width: 5%;
+	width: 4%;
+
+}
+.forme {
+	padding: 10%;
 }
 #toolbar img {
 	width: 100%;
+}
+.pop_up {
+	text-align: center;
+	padding: 2%;
+}
+.btn {
+	-webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  
+  color: #ffffff;
+  font-size: 20px;
+  background: #216996;
+  padding: 10px 20px 10px 20px;
+  border: solid #1f628d 2px;
+  text-decoration: none;
+  margin: 1%;
+
+
 }
