--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,16 @@ html,body {
 	left:30%;
 	text-align: center;
 }
+#boussole{
+    height: 150px;
+    z-index: 1000;
+	position: absolute;
+	bottom: 1.5%;
+	width: 150px;
+	left:1.5%;
+	text-align: center;
+    background-image: url(../image/boussole.png);
+}
 .formulaire, .formulaire_bat {
 	min-height: 50%;
 	position: relative;
