--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,41 @@ html,body {
 	margin: 0;
 	padding: 0;
 }
+.pop_up_inv2 {
+	height: 100%;
+	z-index: 1000;
+	position: absolute;
+	width: 100%;
+	background-color: rgba(0,0,0,0.2);
+	margin: 0;
+	padding: 0;
+}
+@keyframes animation {
+    from {opacity: 0.5;}
+    50% {opacity: 1;}
+    to {opacity: 0.5;}
+}
+.anim{
+	animation-name: animation;
+    animation-duration: 2s;
+    animation-delay: 2s;
+    animation-iteration-count: infinite;
+}
+.deleteUltim {
+	-webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  
+  
+  font-size: 20px;
+  padding: 10px 20px 10px 20px;
+  border: solid #1f628d 2px;
+  text-decoration: none;
+  margin-top: 10%;
+}
+.deleteUltim a {
+	color: white;
+}
 .pop_up {
 	z-index: 1000;
 	
@@ -59,6 +94,15 @@ html,body {
 	min-height: 60%;
 	margin-top: 10%;
 	margin-left: 10%;
+}
+.pop {
+	height: 100%;
+	z-index: 1000;
+	position: absolute;
+	width: 80%;
+	background-color: rgba(0,0,0,0.2);
+	margin: 0;
+	padding: 0;
 }
 #toolbar{
 	position: absolute;
@@ -90,6 +134,9 @@ html,body {
   text-decoration: none;
   margin: 1%;
 
+
+}
+.pop {
 
 }
 .big_btn {
