--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ html,body {
 	font-family: Arial;
 }
 #map {
-	width: 80%;
+	width: 100%;
 	height: 100%;
 	display: inline-block;
 	vertical-align: top;
@@ -180,4 +180,115 @@ html,body {
   padding-bottom: 10px;
   border: solid #1f628d 2px;
   text-decoration: none;
+}
+
+
+/* sidebar */
+
+body.sidebar-show {
+	overflow: hidden;
+}
+
+.sidebar,
+.sidebar-btn,
+.menu-stripes,
+.content {
+	transition: transform .5s ease-in-out;
+}
+
+.content {
+	margin-top: 80px; /* height of sidebar-btn + 10 */
+}
+
+.content.sidebar-show:before {
+	content: "";
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, .5);
+	z-index: 5000;
+	overflow: hidden;
+}
+
+.sidebar {
+	position: fixed;
+	top: 0;
+	right: 0;
+	width: 300px;
+	height: 100%;
+	background: #FFF;
+	color: #333;
+	transform: translate(300px);
+	z-index: 5001;
+}
+
+.sidebar.show {
+	transform: translate(0);
+	overflow-y: auto;
+}
+
+.sidebar-btn {
+	position: absolute;
+	height: 70px;
+	width: 70px;
+	background: rgba(128, 128, 128, .5);
+	border: 0;
+	border-radius: 99px;
+	top: 10px;
+	right: 0px;
+	transform: translate(-3px);
+	z-index: 5002
+}
+
+.sidebar-btn.sidebar-show {
+	transform: translate(-220px);
+}
+
+.menu-stripes1 {
+	position: relative;
+	height: 4px;
+	width: 35px;
+	margin-top: 7px auto;
+	background-color: #FFF;
+	border-radius: 5px;
+	transform: rotate(136deg);
+}
+
+.menu-stripes {
+	position: relative;
+	height: 4px;
+	width: 47px;
+	margin: 7px auto;
+	background-color: #FFF;
+	border-radius: 5px;
+}
+
+.menu-stripes2 {
+	position: relative;
+	height: 4px;
+	width: 35px;
+	margin-top: 7px auto;
+	background-color: #FFF;
+	border-radius: 5px;
+	transform: rotate(42deg);
+}
+
+.sidebar-btn.sidebar-show .menu-stripes {
+	margin: -3px auto;
+}
+.sidebar-btn.sidebar-show .menu-stripes1 {
+	transform: rotate(35deg);
+	margin-left:10px;
+
+
+}
+.sidebar-btn.sidebar-show .menu-stripes {
+	display: none;
+}
+.sidebar-btn.sidebar-show .menu-stripes2 {
+	transform: rotate(130deg);
+	margin-left:10px;
+	margin-top:-4px;
+
 }
