--- a/style.css
+++ b/style.css
@@ -340,3 +340,24 @@ body.sidebar-show {
   display:block;
   margin:16px;
 }
+
+.btntime{
+  background: #6d7173;
+  background-image: -webkit-linear-gradient(top, #6d7173, #000000);
+  background-image: -moz-linear-gradient(top, #6d7173, #000000);
+  background-image: -ms-linear-gradient(top, #6d7173, #000000);
+  background-image: -o-linear-gradient(top, #6d7173, #000000);
+  background-image: linear-gradient(to bottom, #6d7173, #000000);
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  font-family: Arial;
+  color: #ffffff;
+  font-size: 12px;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+}
+
+.btntime:hover {
+  background: #1a75ad;
+}
