--- a/css/style.css
+++ b/css/style.css
@@ -14,31 +14,14 @@ html,body {
   
 }
 .settings {
-	padding-top: 10px;
-	padding-left: 10px;
+
 	width: 19%;
 	display: inline-block;
 	vertical-align: top;
-	float: left;
 }
-
-.settings2 {
-	padding-left: 10px;
-	width: 25%;
-	display: inline-block;
-	vertical-align: top;
-	float: left;
-	color: white;
+.settings h1 {
+	text-align: center;
 }
-
-/*.settings3 {
-	padding-left: 10px;
-	width: 25%;
-	display: inline-block;
-	vertical-align: top;
-	float: left;
-}*/
-
 .leaflet-popup-content-wrapper, .leaflet-popup-tip {
 	background: transparent;
 	text-align: center;
@@ -309,268 +292,3 @@ body.sidebar-show {
 	margin-top:-4px;
 
 }
-
-/*-------------------------------*/
-/*           Wrappers            */
-/*-------------------------------*/
-#wrapper {
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  padding-left: 0;
-  transition: all 0.5s ease;
-}
-#wrapper.toggled #sidebar-wrapper {
-  width: 100%;
-}
-#wrapper.toggled #page-content-wrapper {
-  margin-right: -220px;
-  position: absolute;
-}
-#sidebar-wrapper {
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  background: #2C3E50;
-  height: 250px;
-  left: 220px;
-  margin-left: -220px;
-  overflow-x: hidden;
-  overflow-y: auto;
-  transition: all 0.5s ease;
-  width: 0;
-  z-index: 1000;
-}
-#sidebar-wrapper::-webkit-scrollbar {
-  display: none;
-}
-#page-content-wrapper {
-  width: 100%;
-}
-
-/*-------------------------------*/
-/*       Hamburger-Cross         */
-/*-------------------------------*/
-.hamburger {
-  background: transparent;
-  border: none;
-  display: block;
-  height: 32px;
-  margin-left: 15px;
-  position: fixed;
-  top: 43%;
-  width: 32px;
-  z-index: 1001;
-}
-.hamburger:hover {
-  outline: none;
-}
-.hamburger:focus {
-  outline: none;
-}
-.hamburger:active {
-  outline: none;
-}
-.hamburger.is-closed:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  color: #171814;
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 1;
-  text-align: center;
-  width: 100px;
-}
-.hamburger.is-closed:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
-}
-.hamburger.is-closed:hover .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  top: 0;
-}
-.hamburger.is-closed:hover .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  bottom: 0;
-}
-.hamburger.is-closed .hamb-top {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: black;
-  top: 5px;
-}
-.hamburger.is-closed .hamb-middle {
-  background-color: black;
-  margin-top: -2px;
-  top: 50%;
-}
-.hamburger.is-closed .hamb-bottom {
-  -webkit-transition: all 0.35s ease-in-out;
-  background-color: black;
-  bottom: 5px;
-}
-.hamburger.is-closed .hamb-top,
-.hamburger.is-closed .hamb-middle,
-.hamburger.is-closed .hamb-bottom,
-.hamburger.is-open .hamb-top,
-.hamburger.is-open .hamb-middle,
-.hamburger.is-open .hamb-bottom {
-  height: 4px;
-  left: 0;
-  position: absolute;
-  width: 100%;
-}
-.hamburger.is-open .hamb-top {
-  -webkit-transform: rotate(45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: black;
-  margin-top: -2px;
-  top: 50%;
-}
-.hamburger.is-open .hamb-middle {
-  background-color: black;
-  display: none;
-}
-.hamburger.is-open .hamb-bottom {
-  -webkit-transform: rotate(-45deg);
-  -webkit-transition: -webkit-transform 0.2s cubic-bezier(0.73, 1, 0.28, 0.08);
-  background-color: black;
-  margin-top: -2px;
-  top: 50%;
-}
-.hamburger.is-open:before {
-  -webkit-transform: translate3d(0, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  color: black;
-  content: '';
-  display: block;
-  font-size: 14px;
-  line-height: 32px;
-  opacity: 0;
-  text-align: center;
-  width: 100px;
-}
-.hamburger.is-open:hover before {
-  -webkit-transform: translate3d(-100px, 0, 0);
-  -webkit-transition: all 0.35s ease-in-out;
-  display: block;
-  opacity: 1;
-}
-
-
-/*-------------------------------*/
-/*     Sidebar nav styles        */
-/*-------------------------------*/
-.sidebar-nav {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 0;
-  width: 220px;
-}
-.sidebar-nav .dropdown-menu {
-  background-color: #222222;
-  border-radius: 0;
-  border: none;
-  box-shadow: none;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  width: 100%;
-}
-.sidebar-nav > .sidebar-brand {
-  font-size: 20px;
-  height: 65px;
-  line-height: 44px;
-}
-
-/*-------------------------------*/
-/*          Bouton menu          */
-/*-------------------------------*/
-
-.radio {
-  display: none;
-  font-size: 15px;
-}
-
-.checkbox {
-  display: none;
-  font-size: 15px;
-}
-
-.bouton {
-  margin-bottom: 20px;
-}
-
-.bouton span {
-	color: white;
-}
-
-.bouton label {
-  width: 18px;
-  height: 18px;
-  margin-bottom: -3px;
-  margin-right: 10px;
-  background: #e74c3c;
-  border-radius: 3px;
-  cursor: pointer;
-  position: relative;
-  display: inline-block;
-  -webkit-transition: 300ms all;
-  -moz-transition: 300ms all;
-  -ms-transition: 300ms all;
-  -o-transition: 300ms all;
-  transition: 300ms all;
-}
-
-.bouton label::after {
-  content: "";
-  position: absolute;
-  width: 3px;
-  height: 11px;
-  left: 7px;
-  top: 1px;
-  border-right: 2px solid #fff;
-  border-bottom: 2px solid #fff;
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -ms-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  opacity: 0;
-  -webkit-backface-visibility: hidden;
-  z-index: 1;
-  -webkit-transition: 300ms opacity;
-  -moz-transition: 300ms opacity;
-  -ms-transition: 300ms opacity;
-  -o-transition: 300ms opacity;
-  transition: 300ms opacity;
-}
-
-.bouton input:checked + label {
-  background: #27ae60;
-}
-
-.bouton input:checked + label::after {
-  opacity: 1;
-}
-
-.bouton input[type=radio] + label {
-  border-radius: 100%;
-}
-.bouton input[type=radio] + label::after {
-  left: 6px;
-  top: 2px;
-  height: 10px;
-}
-
-
-
-
-
-
-
