--- a/css/style.css
+++ b/css/style.css
@@ -444,3 +444,43 @@ a, a:visited {
 	transform: rotate(42deg);
 
 }
+
+.oeilvert{
+	width:40px;
+	height:20px;
+	background-color:rgba(200,200,200,0.5);
+	position: relative;
+	top: -38px;
+	left: 209px;
+	border-style: solid;
+	border-width: 5px;
+
+}
+
+.yeux{
+	display:block;
+	width: 12px;
+	height: 18px;
+	background-color: greenyellow;
+	-webkit-border-radius: 6px 6px 6px 6px / 10px 10px 7px 7px;
+	border-radius: 60% 60% 50% / 60% 60% 40% 40%;
+	position: relative;
+	left: 14px;
+	-webkit-transform: rotate(7deg);
+	transform: rotate(90deg);
+}
+
+.yeuxrouge{
+	display:block;
+	width: 12px;
+	height: 18px;
+	background-color: red;
+	-webkit-border-radius: 6px 6px 6px 6px / 10px 10px 7px 7px;
+	border-radius: 60% 60% 50% / 60% 60% 40% 40%;
+	position: relative;
+	top: -1px;
+	left: 228px;
+	z-index: 3;
+	-webkit-transform: rotate(7deg);
+	transform: rotate(90deg);
+}
