--- a/style.css
+++ b/style.css
@@ -138,15 +138,53 @@ html,body {
 .pop {
 
 }
+
 .big_btn {
 	z-index: 1000;
 	position: absolute;
 	bottom: 40px;
-	width: 10%;
-	left:30%;
+	width: 15%;
+    height: 10%;
+	left:40%;
 	text-align: center;
+    background: red;
 }
 
+#days{
+    font-size: 150px;
+}
+
+.speed{
+  color: white;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.3);
+  border: 2px solid white;
+  font-size: 150%;
+  padding: 0.5em;
+  padding-right: 2em;
+    color:red;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+#play{
+  
+
+    cursor:pointer;
+    	z-index: 1001;
+	position: absolute;
+margin-left: 30%;
+    margin-right: auto;
+}
+
+#pause{
+     
+    
+    cursor:pointer;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 #boussole{
     height: 150px;
@@ -342,21 +380,10 @@ body.sidebar-show {
 }
 
 .btntime{
-  background: #6d7173;
-  background-image: -webkit-linear-gradient(top, #6d7173, #000000);
-  background-image: -moz-linear-gradient(top, #6d7173, #000000);
-  background-image: -ms-linear-gradient(top, #6d7173, #000000);
-  background-image: -o-linear-gradient(top, #6d7173, #000000);
-  background-image: linear-gradient(to bottom, #6d7173, #000000);
-  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0px;
-  font-family: Arial;
-  color: #ffffff;
-  font-size: 12px;
-  padding: 10px 20px 10px 20px;
+
 }
 
 .btntime:hover {
-  background: #1a75ad;
+  
+    
 }
