--- a/css/style.css
+++ b/css/style.css
@@ -85,8 +85,8 @@ html,body {
 	color: white;
 }
 #timer{
+    font-size:120%;
     
-    margin-bottom:2%;
 }
 #delete{
     
@@ -154,6 +154,10 @@ html,body {
 
 
 }
+.btntime{
+ 
+   
+}
 .pop {
 
 }
@@ -161,8 +165,10 @@ html,body {
 	z-index: 1000;
 	position: absolute;
 	bottom: 40px;
-	width: 10%;
+	width: 20%;
 	left:30%;
+    min-height: 30px;
+    max-height: auto;
 	text-align: center;
     -moz-box-shadow: 6px 6px 6px 1px #656565;
 -webkit-box-shadow: 6px 6px 6px 1px #656565;
@@ -170,8 +176,25 @@ html,body {
 box-shadow: 6px 6px 6px 1px #656565;
 filter:progid:DXImageTransform.Microsoft.Shadow(color=#656565, Direction=135, Strength=6);
     border-radius: 10px;
+    margin-left:10%;
+    background: white;
 }
-
+#cont{
+    width: 100%;
+        height:100%;
+}
+.half1{
+    height: 100%;
+    width:48%;
+    display:inline-block;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+.half2{
+    height: 100%;
+    width:48%;
+    display:inline-block;
+}
 
 #boussole{
     height: 150px;
@@ -653,6 +676,7 @@ a, a:visited {
 	  font-size: 1.2em;
 	  width: 200%;
 	  margin-bottom: 30px;
+ 
 }
 
 .btn {
@@ -689,9 +713,10 @@ a, a:visited {
 	  font-size: 1.2em;
 	  width: 80%;
     margin-top: 2%;
-	  margin-bottom: 2%;
+	  margin-bottom: 18%;
     margin-left: 10%;
     margin-right: 10%;
+    border-radius: 10px;
 
 }
 .pop_up {
