--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,7 @@ html,body {
 #delete{
 
 	background-color:white;
+    margin-top:-15px;
 
 }
 .pop_up {
@@ -155,13 +156,6 @@ html,body {
 
 
 }
-.btntime{
-
-
-}
-.pop {
-
-}
 .big_btn {
 	z-index: 1000;
 	position: absolute;
@@ -183,6 +177,22 @@ html,body {
 #cont{
 	width: 100%;
 	height:100%;
+}
+.liste{
+       list-style-type: none;
+}
+.onglet2{
+    background:white;margin-left: 1%;margin-right: 1%;
+    height: 60%;
+}
+.onglet1{
+    background:white;margin-left: 1%;margin-right: 1%;
+}
+.filtres{
+    color:black
+}
+.filtres_cont{
+    margin-top:20px
 }
 .half1{
 	height: 100%;
@@ -281,7 +291,7 @@ body.sidebar-show {
 	position: absolute;
 	height: 70px;
 	width: 70px;
-	background: rgba(128, 128, 128, .5);
+	background: white;
 	border: 0;
 	border-radius: 99px;
 	top: 10px;
@@ -294,14 +304,9 @@ body.sidebar-show {
 	transform: translate(-220px);
 }
 
-.menu-stripes1 {
+#menu-stripes1 {
 	position: relative;
-	height: 4px;
-	width: 35px;
-	margin-top: 7px;
-	background-color: #FFF;
-	border-radius: 5px;
-	transform: rotate(136deg);
+
 }
 
 .menu-stripes {
@@ -327,8 +332,7 @@ body.sidebar-show {
 	margin: -3px auto;
 }
 .sidebar-btn.sidebar-show .menu-stripes1 {
-	transform: rotate(35deg);
-	margin-left:10px;
+
 
 
 }
@@ -750,13 +754,15 @@ a, a:visited {
 /*-------------------------------*/
 
 .onglet-btn {
-	background: none;
-	margin-left: 23px;
+	background: white;
+	margin-left:3%;
 	margin-top: 25px;
+        width: 45%;
+    
 }
 
 .onglet1-img {
-	width: 100px;
+	width: 40px;
 }
 
 .onglet2-img {
@@ -777,6 +783,8 @@ a, a:visited {
 
 .onglet2 {
 	margin-top: -50px;
+    
+
 }
 
 /*-------------------------------*/
